Fixed the namespacing in the js

--- a/css/style.css
+++ b/css/style.css
@@ -121,8 +121,8 @@ body {
     height: 50px;
 }
 
-footer {
-
+#footercontent {
+    margin: 20px;
 }
 
 h1 {
